src/iframe/css/dataExploration.css
.colorMode1 {
  background-color: #f8f8f8;
  color: #111;
  transition: 0.3s;
}

.customBorder {
  border: 1px solid #777;
  border-radius: 3px;
}

.add-graph-box {
  padding: 10px;
  margin: 10px;
}

.add-graph-message {
  display: flex;
  justify-content: center;
  font-size: 22px;
  font-style: bold;
}

.graph-button-area {
  margin: auto;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.graph-button {
  margin: 10px;
}

.chart-control {
/*  display: flex;
  flex-direction: row;*/
}

.temp-chart-box {
  padding: 10px;
  margin: 10px;
  margin: auto;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.temp-chart-pics {
}

body {
    width: 100%;
    height: 100vh;
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    overflow: hidden;
    font-family: 'Roboto', sans-serif;
}

.map {
    position: relative;
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
}

.queryInfo {
    margin: 10px;
    background-color: white;
    padding: 8px;
    border-radius: 3px;
    border: 2px solid rgba(0, 0, 0, 0.2);
}

#queryInfoText {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
    font-size: 14px;
    font-weight: 500;
    line-height: 22px;
    color: #333;
}

#main {
  position: absolute;
  z-index: 2000;
  padding: 16px;
}

.sidebar {
  opacity: 0.85;
  z-index: 2001;
  height: 100%;
  width: 0;
  position: fixed;
  top: 0;
  left: 0;
  overflow-x: hidden;
  transition: 0.3s;
  max-width: 870px;
}

.sidebar a {
  color: #212121;
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 19px;
  display: block;
  transition: 0.3s;
}

.menuColumn {
    height: 100%;
    margin: 2px;
}

.categoryName {
    position: relative;
    top: 0;
    width: 100%;
    height: 40px;
}

.menuColumn .categoryName .titleText{
    border-bottom-style: solid;
    border-bottom-width: thin;
    padding: 5px;
    width:100%;
    font-size: 22px;
}

.menuHeader{
    padding: 10px;
}

.menuHeaderLabel{
    border-bottom-style: dashed;
    border-bottom-width: thin;
    padding-top: 10px;
    font-size: 18px;
    cursor: pointer;
}

.content-section {
  margin: 10px;
  max-height: 18vh;
  overflow-y: auto;
}

.slider-individual {
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
}

.slider-section {
  padding: 10px 17px;
}

.slider-title {
  font-size: 15px;
  text-align: left;
  padding-bottom: 5px;
}

.checkbox-section {
  padding-left: 10px;
  padding-right: 10px;
}

.checkbox-section-label {
  font-size: 17px;
  text-align: left;
  padding-bottom: 5px;
  padding-top: 3px;
  padding-left: 10px;
  border-bottom-style: solid;
  border-bottom-width: thin;
}

.checkbox-section-options {
  padding: 10px;
  font-size: 14px;
  text-align: left;
}

.checkbox-section-title {
  padding-left: 8px;
}

.modal-popout {
  padding: 10px;
}

.sidebar .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

.checkboxConstraintLabel{
    padding: 5px;
    text-align: left;
    color: white;
}

.checkboxConstraintContainer {
    padding: 5px;
    padding-bottom: 2px;
}

.menuHeaderContainer{
    padding: 5px;
}

.layerContainer{
    margin: 5px;
    padding: 0;
    cursor: default;
}

.layerSelector{
    padding: 8px;
}

.layerConstraints{
    overflow-y: auto;
    max-height: 45vh;
    padding: 10px;
}

.checkboxContainer{
    margin-bottom: 15px;
}

.sliderContainer{
    padding: 5px;
    margin-bottom: 15px;
}

.checkbox-for-layer {
    float: right;
    margin-top: 5px;
}

.collapsible, .attributionContainer, #clearFeatures {
    cursor: pointer;
    padding: 10px;
    margin-top: 5px;
    width: 100%;
    border: none;
    text-align: left;
    outline: none;
    font-size: 15px;
}
.vertical-center {
    margin: 0;
    position: absolute;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}

.editConstraints{
    opacity: 0.85;
    position: absolute;
    top:12.5%;
    right:12.5%;
    z-index: 9999;
    padding: 10px;
    max-width: 40vw;
    max-height: 60vh;
    min-width: 20vw;
}

.editConstraintsHeader {
    top: 0;
    padding: 10px;
    font-size: 20px;
    width: 100%;
}

.editConstraintArea {
    overflow: auto;
    max-height: 40vh;
    margin-left: 10px;
    margin-right: 10px;
    margin-bottom: 10px;
    padding-top: 10px;
}

.editConstraintsConstraint {
    padding: 1px;
    padding-left: 20px;
}

.saveAndCloseConstraints{
    bottom: 25px;
    left: 85%;
    position: sticky;
}

.clusterContainer {
    display: none;
}

.constraintCloseButton {
  padding: 10px;
}

.modelSelect{
    padding: 10px;
    margin-bottom: 10px;
    background-color: #FFF;
    border-radius: 3px;
}

.modelParameter{
    background-color: #DDD;
    border-radius: 3px;
    padding: 10px;
    margin-bottom: 10px;
}

.modelCollection{
    background-color: #DDD;
    border-radius: 3px;
    padding: 10px;
    margin-bottom: 10px;
}

.modelButton{
    margin-bottom: 10px;
}

#model-container{
    margin-left: 25px;
    margin-right: 25px;
    display: none;
}

.overlay {
    position: absolute;
    bottom: 0px;
    left: 0px;
    overflow: auto;
}

.overlay .box{
    width: 100%;
    height: 100%;
    border: 1px solid #777;
    border-radius: 3px;
    box-sizing: border-box;
}

.overlay .box .option{
    width: 15px;
    height: 15px;
    border-radius: 50%;
    background: #f8f8f8;
    border: 1px solid #777;
    position: absolute;
}

.overlay .box .option.top-right {
    right: -5px;
    top: -5px;
    cursor: nesw-resize;
}

#clusterLegend{
    background-color: white;
    position: absolute;
    bottom: 8%;
    margin: auto;
    z-index: 999999;
    left: 50%;
    padding: 10px;
    display: none;
    transform: translateX(-50%);
}

.clusterLegendField{
    height: 6vh;
    width: 6vh;
    cursor: pointer;
    display: inline-block;
}

.clusterLegendField:hover{
    filter: brightness(0.4);
}

.graph-pic {
  cursor: pointer;
  height: 25px;
  width: 25px;
  margin: 15px;
  margin-left: 30px;
}

.graph-button-pic {
  height: 25px;
  width: 25px;
}

.close-button-pic {
  height: 25px;
  width: 25px;
}

.histogram-chart-area {
    width: 60%;
}

.single-chart-area {
  display: flex;
  flex-direction: column;
}

.chart-container {
  display: flex;
}

.chart-container-arrow {
  min-width: 50px;
  background-color: #f00;
}

.scatterplot-change-x-axis-button {
  background-color: #f00;
  min-height: 25px;
}

.scatterplot-change-y-axis-button {
  background-color: #00f; /* oof */
  min-height: 25px;
}

